# ChessEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  chessEngine.cpp
docs/: ARCHITECTURE.md  NNUE.md  PROJECT_STATE.md  REFERENCES.md  ROADMAP.md  TODO.md
engine/: CMakeLists.txt
engine/datagen/: gen_data.cpp
engine/include/chess/: attacks.hpp  bitboard.hpp  book.hpp  eval.hpp  move.hpp  movegen.hpp  movelist.hpp  nnue.hpp  position.hpp  search.hpp  types.hpp
engine/src/book/: book.cpp
engine/src/core/: bitboard_check.cpp  move_check.cpp  position.cpp  types_check.cpp
engine/src/eval/: embedded_net.cpp  eval.cpp  nnue.cpp
engine/src/movegen/: attacks.cpp  magics.cpp  movegen.cpp
engine/src/search/: search.cpp
engine/src/uci/: main.cpp
gui/: CMakeLists.txt
gui/resources/pieces/: CREDITS.md  pieces.qrc
gui/src/: BoardWidget.cpp  BoardWidget.h  GuiBoard.cpp  GuiBoard.h  MainWindow.cpp  MainWindow.h  NewGameDialog.cpp  NewGameDialog.h  UciEngine.cpp  UciEngine.h  main.cpp
tests/: CMakeLists.txt  core_tests.cpp
tools/: README.md  build_versions.ps1  embed_net.py  make_test_net.py  sprt.ps1
tools/cloud/: GCP_GUIA_PASSO_A_PASSO.md  gcp_datagen.md  startup.sh
tools/openings/: openings.pgn
tools/training/: PUBLIC_DATA.md  README.md  gen_shards.ps1  normalize_results.py  retrain.ps1  sprt_nnue.ps1
